# gaggia_classic_pro_pid

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp  sdkconfig
app/lv_examples/: CMakeLists.txt
app/lv_examples/lv_examples/: lv_examples.h
app/lv_examples/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.h
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
docs/: README.md
include/: max31865.h  max31865_impl.hpp  pid.h
main/: CMakeLists.txt  main.cpp
simulation/: CMakeLists.txt  lv_conf.h
simulation/main/src/: main.c
src/: CMakeLists.txt  max31865.cpp
src/ui/: lv_demo_widgets.c
tests/: CMakeLists.txt
tests/pid/: CMakeLists.txt  model_boiler.cpp
